Fix layout problems (somewhat)

--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,8 @@ h1 {
     width: 100%;
     background-color: var(--medium-slate-gray);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-    grid-auto-rows: minmax(1fr, auto);
-    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    align-items: baseline;
     padding: 2rem;
     gap: 2rem;
 }
@@ -81,8 +80,7 @@ h1 {
     display: flex;
     flex-direction: column;
     border: 4px solid var(--burnt-crimson);
-    max-width: 20rem;
-    max-height: 30rem;
+    min-height: 27.5rem;
 }
 
 .card-header {
